# tibanna

./: .flake8  .gitignore  .tibanna.config  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  GQYgRy5uNoF3.input.json  MANIFEST.in  Makefile  NbTvnWsDA46p.run.json  R7ad27DTwtSf.postrun.json  README.md  RsqlgsTIcrIq.run.json  add_cwlversion.sh  alsjekvjf  alsjekvjf-extra  aws_decode_run_json.py  aws_run_workflow.sh  aws_update_run_json.py  awstat  awsub  build-log  buildspec.yml  buildspec_amd_only.yml  create_json.py  create_run_workflow.sh  delete.py  download_command_list.txt  env_command_list.txt  hic_parta_input3.json  inputs.yml  job_list  lala  lalala  log  md5-validate.workflow.insert.json  message  metrics.html  metrics.tsv  note.md  (+41 more)
0913_failed_bwa_runs/: bwa-mem_4DNFI4F6KXR5-4DNFIY55W1HW.json  bwa-mem_4DNFI7PO1Y9I-4DNFI7FTRUX4.json  bwa-mem_4DNFIA7QPBK1-4DNFIFSML3KY.json  bwa-mem_4DNFIBCRYBPW-4DNFI8TIPK75.json  bwa-mem_4DNFIJI2ZEWN-4DNFIMZ4MZCG.json  bwa-mem_4DNFINLRXHSC-4DNFIHNEAEMA.json  bwa-mem_4DNFIO9OHYUV-4DNFIM62WI62.json  bwa-mem_4DNFIVNDDEDZ-4DNFI29W6CX6.json
0914_failed_merge_runs/: pairsam-merge_4DNEXENKINA2.json
0914_failed_parsesort_runs/: pairsam-parse-sort_4DNES2M5JIGV_4DNFI68ZESEE.runonly.json
0914_test_merge_runs/: test1.json
0916_failed_addfrag/: addfragtopairs_4DNEXBZAHAQZ.json  addfragtopairs_4DNEXLQ26QO3.json
0916_filter_for_largeset/: pairsam-filter_4DNEXENKINA2.json
0916_partb/: partb_4DNESLLTENG9.json
0917_failed_partb_runs/: partb_4DNESLLTENG9_set.json
0917_partb_runs/: 4DNEXENKINA2+4DNEXZJZ5EBZ.json  4DNEXZJZ5EBZ.json
0917_partc_runs/: 4DNESLLTENG9_set.json  4DNEXENKINA2+4DNEXZJZ5EBZ.json  4DNEXENKINA2.json  4DNEXLQ26QO382.json  4DNEXZJZ5EBZ.json
AMI/: create_tibanna_ami.py  launch_for_tibanna_ami.sh  tibanna_ami.sh  tibanna_ami_test.sh
awsf/: README.md  aws_decode_run_json.py  aws_run_workflow.sh  aws_run_workflow_cwl_v1.sh  aws_run_workflow_generic.sh  aws_run_workflow_generic_py3.sh  aws_run_workflow_wdl.sh  aws_update_run_json.py  aws_upload_output_update_json.py  download_workflow.py  split_num.py
awsf3/: Dockerfile  __main__.py  aws_decode_run_json.py  aws_run_workflow_generic.sh  aws_upload_output_update_json.py  cloudwatch_agent_config.json  create_ami.sh  create_tibanna_ami.py  log.py  postrun_utils.py  prerun_utils.py  spot_failure_detection.sh  target.py  utils.py
awsf3-docker/: Dockerfile  aws_run_workflow_generic.sh  cron.sh  daemon.json  run.sh  top.sh
awsf_cwl_draft3/: aws_decode_run_json.py  aws_run_workflow.sh  aws_upload_output_update_json.py  awstat  create_run_workflow.sh  split_num.py
awsf_cwl_v1/: aws_decode_run_json.py  aws_run_workflow.sh  aws_upload_output_update_json.py  run_workflow.v989328isyrbag02.sh
core/: .ff_utils.py.swp  __main__.py  _version.py  check_task.py  cw_utils.py  ec2_utils.py  fastqc_utils.py  ff_utils.py  iam_utils.py  lambda_utils.py  launch_utils.py  metric_utils.py  nnested_array.py  pony_utils.py  run_task.py  sbg_utils.py  utils.py  wfr.py
core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cromwell/: README
doc/: index.md
docs/: 4dn_pipelines.rst  Makefile  ami.rst  api.rst  collecting_metrics.rst  commands.rst  conf.py  cwl.rst  dependency.rst  dev.rst  execution_json.rst  how_it_works.rst  index.rst  installation.rst  monitoring.rst  news.rst  pony.rst  requirements.txt  simple_example.rst  simple_example_cond_merge.rst  simple_example_hello.rst  simple_example_md5.rst  simple_example_merge.rst  simple_example_merge_and_cut.rst  snakemake.rst  startaws.rst  unicorn.rst  wdl.rst
examples/: md5_test_input.json
json/: 65qpesGOdDuB.run.json  6IAd4HmVN6Do.run.json  C24WkGoVKfg9.run.json  LQEfk3yazaa5.run.json  MnAdcMoHVqzR.run.json  UXN9jBFbYznk.run.json  VbAWsToXISHZ.run.json  aKQ8dvDEqOCt.run.json  by7tsdXgfxY1.run.json  dH9oKCFTz24z.run.json  rv44vwT7YGbg.run.json  v989328isyrbag02.run.json
jsons/: README.md
lambda/: README.md  create_lambda_function.sh  lambda_function.py  read_sbg_job_detail_create_files.py  sample_lambda_function.py  test_api.py  test_api_metadata.py  test_api_test_mount.py  test_list_volume_api.py
lambda-api/: README.md  app.py  lambda_function.py  requirements.txt
lambda-no-api/: tasks.py
lambda_sbg/: app.py
notebooks/: 0) Run missing md5 and qc.ipynb  1) Run HiC PartA-Soo.ipynb  1) Run HiC PartA.ipynb  README.md  (+30 more)
(+1067 files in other folders)
