[tool.poetry]
name = "tibanna"
version = "5.4.0"
description = "Tibanna runs portable pipelines (in CWL/WDL) on the AWS Cloud."
authors = ["4DN-DCIC Team <support@4dnucleome.org>"]
license = "MIT"
readme = "README.md"
keywords = ["tibanna"]
homepage = "http://github.com/4dn-dcic/tibanna"
repository = "http://github.com/4dn-dcic/tibanna.git"
packages = [
  { include="tibanna", from="." },
  { include="awsf3", from="." },
]
# The following is needed so that we can extract the version at runtime
include = ["pyproject.toml"]
classifiers = [
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Operating System :: POSIX :: Linux',

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate whether you support Python 2, Python 3 or both.
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12'
]

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
python-lambda-4dn = "0.12.3"
boto3 = "^1.34.136"
botocore = "^1.34.136"
Benchmark-4dn = "^0.5.24"
tomlkit = "^0.11.0"

[tool.poetry.dev-dependencies]
boto3-stubs = "^1.34.136"
botocore-stubs = "^1.34.136"
invoke = "^2.2.0"
flake8 = "^3.9.0"

# PyTest and its auxiliary support files
# Need pytest-redis 3.0.2 or higher for pytest 7.4.2 (or higher).
pytest = "^7.4.2"
pytest-redis = "^3.0.2"
pytest-cov = "^4.1.0"
pytest-parallel = "^0.1.1"
pytest-mock = "^3.11.1"

coverage = {extras = ["toml"], version = "^6.3.2"}

# Docs build dependencies
Sphinx = "^3.3.0"
sphinx-click = "^2.5.0"
sphinx-rtd-theme = "0.5.0"  # Do we have a good reason to pin this? -kmp 9-Nov-2020

[tool.poetry.scripts]
tibanna = "tibanna.__main__:main"
awsf3 = "awsf3.__main__:main"
publish-to-pypi = "dcicutils.scripts.publish_to_pypi:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "*/__pycache__/*", "*/tests/*", "*/dist/*", "*/.eggs/*"]
include = ["*/tibanna/*"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov --cov-report term --cov-fail-under 25 -rxs"
